tests/tests/checks/snapshots/analysis/cpp/lambdas.cpp/check_glob@Struct1UsedInLambda.snap
---
source: tests/test_check_insta.rs
expression: "&json_results"
---
[
  {
    "loc": "00006:9-15",
    "source": 1,
    "nestingRange": "6:24-6:25",
    "syntax": "def,function",
    "type": "void (void) const",
    "pretty": "function Struct1::method",
    "sym": "_ZNK7Struct16methodEv"
  },
  {
    "loc": "00006:9-15",
    "structured": 1,
    "pretty": "Struct1::method",
    "sym": "_ZNK7Struct16methodEv",
    "args": [],
    "kind": "method",
    "parentsym": "T_Struct1",
    "overrides": [],
    "props": [
      "instance",
      "user"
    ]
  },
  {
    "loc": "00006:9-15",
    "target": 1,
    "kind": "def",
    "pretty": "Struct1::method",
    "sym": "_ZNK7Struct16methodEv",
    "context": "Struct1",
    "contextsym": "T_Struct1",
    "peekRange": "6-6"
  },
  {
    "loc": "00011:10-16",
    "source": 1,
    "syntax": "use,function",
    "type": "void",
    "pretty": "function Struct1::method",
    "sym": "_ZNK7Struct16methodEv",
    "argRanges": []
  },
  {
    "loc": "00011:10-16",
    "target": 1,
    "kind": "use",
    "pretty": "Struct1::method",
    "sym": "_ZNK7Struct16methodEv",
    "context": "test()::(anonymous class)::operator()",
    "contextsym": "_ZZ4testvENK3$_0clEOT_",
    "argRanges": []
  }
]
